--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- Screen 4: No Response (Video) -->
     <div id="screen-no" class="screen">
         <div class="no-video-container">
-            <video id="no-video" autoplay muted loop playsinline preload="auto">
+            <video id="no-video" muted loop playsinline preload="auto" webkit-playsinline>
                 <source src="assets/no-video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
