--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h1 class="wohoo">Wohoo!</h1>
                 <div class="proposal-heart-decoration">💖</div>
                 <div class="image-container">
-                    <img id="yes-image" src="assets/cartoon-image.png" alt="Valentine's Day">
+                    <img id="yes-image" src="assets/real-image.png" alt="Valentine's Day">
                 </div>
             </div>
         </div>
