--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 
     <!-- Screen 4: No Response (Video) -->
     <div id="screen-no" class="screen">
+        <div id="no-video-overlay" class="no-video-overlay" aria-hidden="true"></div>
         <div class="no-video-container">
-            <video id="no-video" autoplay loop playsinline preload="auto">
+            <video id="no-video" loop playsinline preload="auto">
                 <source src="assets/no-video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
