changed the name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <div class="heart-icon">❤️</div>
                         </div>
                         <div class="envelope-body">
-                            <div class="envelope-name">Lee Mayer Peru</div>
+                            <div class="envelope-name">Tooti 🍓</div>
                         </div>
                     </div>
                     <div class="envelope-back"></div>
