--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <span class="sparkle">✨</span>
                     <span class="sparkle">✨</span>
                 </div> -->
-                <h1 class="proposal-name">Andiv Yafe</h1>
+                <!-- <h1 class="proposal-name"></h1> -->
                 <div class="proposal-heart-decoration">💕</div>
                 <h2 class="proposal-question">Will you be my valentine?</h2>
                 <div class="button-container">
